--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
+    "swiper": "^10.2.0",
     "uuid": "^9.0.0",
     "zod": "^3.22.2"
   },
